Added body content

--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
     </nav>
   </div>
   <div class="container-fluid">
-  <div class="row bg-white">
-    <div class="row d-flex jutisfy-content-center col-xl-8 col-lg-8 mt-5">
+  <div class="row bg-white mt-5">
+    <div class="row col-xl-8 col-lg-8">
       <div class="featured-stories col-xl-4 col-lg-4 p-auto ">
-        <div class="card" style="width: 21.375rem;">
+        <h2>FEATURED STORIES</h2>
+        <div class="card">
           <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
           <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -81,7 +82,8 @@
         </div>
       </div>
       <div class="top-stories col-xl-8 col-lg-8 ">
-        <div class="card" style="width: 18rem;">
+        <h2>TOP STORIES</h2>
+        <div class="card">
           <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
           <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -89,8 +91,8 @@
         </div>
       </div>
   </div>
-    <div class="opinion col-12 col-lg mt-5 border-0 outline-0">
-      <div class="card" style="width: 18rem;">
+    <div class="opinion col-12 col-lg-4 border-0 outline-0">
+      <div class="card">
         <div class="card-header">
           Featured
         </div>
