--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="signin-cont flex">
           <a class="text-uppercase text-white font-weight-bold" href="#">sign in</a>
-          <a class="text-uppercase bg-white text-danger font-weight-bold" href="#">suscribe&nbsp;<span
+          <a class="text-uppercase bg-white text-danger font-weight-bold" href="#">subscribe&nbsp;<span
               class="fas fa-chevron-right"></span></a>
           <a class="text-decoration-none d-lg-none d-xl-none" href="#"><i class="fas fa-bars text-white font-weight-bold"></i></a>
         </div>
@@ -42,8 +42,8 @@
     </header>
     <nav class="navbar d-none d-lg-block d-xl-block border-bottom">
       <ul class="nav align-item-center justify-content-center align-content-between d-flex flex-grow-1 p-0 m-0" style="color: black;" >
-        <li class="nav-item border-right text-center flex-grow-1 font-weight-bold" ><a class="nav-link text-decoration-none" href="#">U.S.</a></li>
-        <li class="nav-item border-right text-center flex-grow-1 font-weight-bold"><a class="nav-link text-decoration-none" href="#">World</a>
+        <li class="nav-item border-right text-center flex-grow-1 font-weight-bold"><a class="text-dark nav-link text-decoration-none" href="#">U.S.</a></li>
+        <li class="nav-item border-right text-center flex-grow-1 font-weight-bold"><a class="text-dark nav-link text-decoration-none" href="#">World</a>
         </li>
         <li class="nav-item border-right text-center flex-grow-1 font-weight-bold"><a class="nav-link text-decoration-none" href="#">Business</a>
         </li>
@@ -62,47 +62,160 @@
         <li class="nav-item border-right text-center flex-grow-1 font-weight-bold"><a class="nav-link text-decoration-none"  href="#">Vantage</a>
         </li>
         <li class="nav-item text-center flex-grow-1 font-weight-bold"><a class="nav-link text-decoration-none" href="#">Weather</a></li>
-        <li>
-          <input class=" border-none outline-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-        <label for="search-input" class="mb-0 mt-1"></label>
+        <li class="d-flex align-items-center">
+          <input class=" border-top-0 border-bottom-0 border-left-0 border-right-0 outline-0 w-50" type="search" placeholder="Search" aria-label="Search" id="search-input">
+        <label for="search-input" class="mb-0 mt-1 "><i class="fas fa-search font-weight-bold"></i></label>
         </li>
       </ul>
     </nav>
   </div>
-  <div class="container-fluid">
-  <div class="row bg-white mt-5">
-    <div class="row col-xl-8 col-lg-8">
-      <div class="featured-stories col-xl-4 col-lg-4 p-auto ">
-        <h2>FEATURED STORIES</h2>
-        <div class="card">
+  <div class="container-fluid ">
+  <div class="row bg-white mt-5 ustify-content-center">
+    <!--STORY SECTION-->
+    <div class="row col-12 col-lg-8">
+      <div class="row featured-stories col-12 col-md-5 p-auto ">
+        <p class="col-12 text-uppercase font-weight-bold text-muted mb-0 p-0">featured stories</p>
+        <div class="col-12 card border-0 pb-3 pt-0 px-0">
+          <div class="image-wrapper">
+          <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+            <p class="text-bottom p-0 m-0">U.S</p>
+        </div>
+          <div class="card-body">
+            <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">What Does a Furlough Mean for Your Employment Rights?</a></h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="col-12 card p-0 border-0">
+          <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="col-12 card p-0 border-0">
+          <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="col-12 card p-0 border-0">
           <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
           <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
       </div>
-      <div class="top-stories col-xl-8 col-lg-8 ">
-        <h2>TOP STORIES</h2>
-        <div class="card">
+
+      <!---Top STories-->
+      <div class="top-stories col-12 col-md-7 order-first-sm">
+        <p class="text-uppercase font-weight-bold text-muted mb-0">top stories</p>
+        <div class="card mt-2 border-0">
           <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
-          <div class="card-body">
+          <div class="card-body p-0">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="col-12 row m-4">
+          <div class=" col-12 col-md-4 p-0 mx-2">
+            <div class="card border-0">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class=" col-12 col-md-4 p-0 mr-2">
+            <div class="card border-0 ">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 p-0">
+            <div class="card border-0">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 row m-4 container-fluid">
+          <div class=" col-12 col-md-4 p-0">
+            <div class="card border-0">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class=" col-12 col-md-4 p-0">
+            <div class="card border-0">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 p-0">
+            <div class="card border-0">
+              <img class="card-img-top" src="https://d.newsweek.com/en/full/1579695/dominic-raab.jpg?w=397&h=265&q=90&f=ab8ebdd98bf8144162c22f5eb61a216e" alt="Card image cap">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
   </div>
+  <!-- OPINION SECTION-->
     <div class="opinion col-12 col-lg-4 border-0 outline-0">
-      <div class="card">
-        <div class="card-header">
-          Featured
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
+      <p class="text-uppercase font-weight-bold text-muted mb">opinion</p>
+      <div class="">
+        <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont">
+          <img class="pr-3 mb-2" src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454" alt="Fred">
+          <div>
+            <p class="font-weight-bold">
+              <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+            </p>
+            <p class="text-muted mb-2">
+              By Fred Guttenberg
+            </p>
       </div>
     </div>
+    <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont">
+      <img class="pr-3 mb-2" src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454" alt="Fred">
+      <div>
+        <p class="font-weight-bold">
+          <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a> 
+        </p>
+        <p class="text-muted mb-2">
+          By Fred Guttenberg
+        </p>
+  </div>
+</div>
+ <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont">
+          <img class="pr-3 mb-2" src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454" alt="Fred">
+          <div>
+            <p class="font-weight-bold">
+              <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+            </p>
+            <p>
+              By Fred Guttenberg
+            </p>
+      </div>
+    </div>
+    <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont">
+      <img class="pr-3 mb-2" src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454" alt="Fred">
+      <div>
+        <p class="font-weight-bold">
+          <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+        </p>
+        <p class="text-muted mb-2">
+          By Fred Guttenberg
+        </p>
+  </div>
+</div>
   </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
