--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <main class="container-fluid p-0">
     <div class="row bg-white mt-5 justify-content-center">
       <!--STORY SECTION-->
-      <div class="row col-12 col-lg-9">
+      <div class="row col-12 col-lg-8">
         <div class=" featured-stories col-12 col-md-5 p-auto ">
           <p class="col-12 text-uppercase font-weight-bold text-muted mb-0 p-0">featured stories</p>
           <div class="col-12 card border-0 pb-3 pt-0 px-0">
@@ -218,7 +218,7 @@
                   <div class="card-title">
                     <a href="#">Restauranteur Delivers Oranges to Hospital Workers Amid Coronavirus Crisis</a>
                   </div>
-                  <p class="card-text">"We all have to help each other," Matthew Fermin, owner of East Harlem restaurant Santiago's Beer Garden, told Newsweek.</p>
+                  <p class="card-text pan-hero-text">"We all have to help each other," Matthew Fermin, owner of East Harlem restaurant Santiago's Beer Garden, told Newsweek.</p>
                 </div>
               </div>
             </div>
@@ -234,7 +234,7 @@
                   <div class="card-title">
                     <a href="#">Teenagers Shop for the Vulnerable During Coronavirus Emergency</a>
                   </div>
-                  <p class="card-text">"I almost cried," said a user of Six Feet Supplies, a charity started by teenagers who shop for those susceptible to COVID-19.</p>
+                  <p class="card-text pan-hero-text">"I almost cried," said a user of Six Feet Supplies, a charity started by teenagers who shop for those susceptible to COVID-19.</p>
                 </div>
               </div>
             </div>
@@ -250,7 +250,7 @@
                   <div class="card-title">
                     <a href="#">Philly DJ Rallies Friends, Strangers to Feed Nurses and Support Businesses</a>
                   </div>
-                  <p class="card-text">"I want to keep it going as long as we can," Ryan O'Connell told Newsweek.</p>
+                  <p class="card-text pan-hero-text">"I want to keep it going as long as we can," Ryan O'Connell told Newsweek.</p>
                 </div>
               </div>
             </div>
@@ -269,7 +269,7 @@
                   <div class="card-title">
                     <a href="#">Soothing CBD Gifts for an Anxious Time</a>
                   </div>
-                  <p class="card-text">CBD may be just the thing to make the stress everyone is feeling a little more bearable. We tested more than 25 gift sets that are a timely treat for yourself or someone from whom you are social distancing.</p>
+                  <p class="card-text pan-hero-text">CBD may be just the thing to make the stress everyone is feeling a little more bearable. We tested more than 25 gift sets that are a timely treat for yourself or someone from whom you are social distancing.</p>
                 </div>
               </div>
             </div>
@@ -285,7 +285,7 @@
                   <div class="card-title">
                     <a href="#">The Relief of Uncertainty, Muses One New Yorker</a>
                   </div>
-                  <p class="card-text">In these pestilent days of being a New York City denizen during the age of COVID-19, one travel writer muses on what we can learn from the uncertainty of reality.</p>
+                  <p class="card-text pan-hero-text">In these pestilent days of being a New York City denizen during the age of COVID-19, one travel writer muses on what we can learn from the uncertainty of reality.</p>
                 </div>
               </div>
             </div>
@@ -301,20 +301,21 @@
                   <div class="card-title">
                     <a href="#">Marvel at These 10 Freaks of Nature</a>
                   </div>
-                  <p class="card-text">The world is filled with unique, breathtaking natural wonders—from boiling craters to caves full of luminescent glowworms. These 10 sites are a great place to start when looking for hope in some of Mother Nature's greatest offerings.</p>
+                  <p class="card-text pan-hero-text">The world is filled with unique, breathtaking natural wonders—from boiling craters to caves full of luminescent glowworms. These 10 sites are a great place to start when looking for hope in some of Mother Nature's greatest offerings.</p>
                 </div>
               </div>
             </div>
           </div>
           <!--MoreStories-->
          <div>
-          <p class="text-uppercase font-weight-bold text-muted ">More Stories</p>
-          <div class="d-flex border-top border-bottom  mb-3 op-cont py-2">
-            <img class="pr-3 mb-2" src="https://d.newsweek.com/en/full/1581653/prince-harry.jpg?w=95&h=95&f=8c22cac59f2666e8f86f95fa171a71e9" alt="Fred">
-            <div>
-              <p class="font-weight-bold">
-                <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+          <p class="text-uppercase font-weight-bold text-muted">More Stories</p>
+          <div class="d-flex border-top border-bottom  mb-3 op-cont py-2 pl-2">
+            <img class="pr-3 mb-2 more-img" src="https://d.newsweek.com/en/full/1582081/thae-yong-ho-north-korea-south-korea.jpg?w=95&h=95&f=d3a42c85d96974141e0446e2db9ca863" alt="Fred">
+            <div class="col-8 pl-0 ml-0">
+              <p class="font-weight-bold pl-0 ml-0">
+                <a class="text-decoration-none" href="#">Highest Ranking North Korean Defector Wins Seat in South Korea Election </a>
               </p>
+              <p class="pl-0 ml-0 pb-0">Thae Yong Ho abandoned his post as deputy ambassador in London after becoming aware of the "gruesome realities" of life in the North.</p>
         </div>
          </div>
       </div>
@@ -324,55 +325,55 @@
       <div class="opinion col-12 col-lg-3 border-0 outline-0">
         <p class="text-uppercase font-weight-bold text-muted ">opinion</p>
         <div class="">
-          <div class="d-flex border-bottom  ml-0 pl-0 py-2 mb-3 op-cont">
+          <div class="d-flex border-bottom  ml-0 pl-0 py-1 mb-3 op-cont">
             <img class="pr-2 mb-2 opinion-img"
-              src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454"
-              alt="Fred">
+              src="https://d.newsweek.com/en/full/1581775/arul-himanshu-mishra.png?w=63&h=63&f=e91b3889f635a00027584a99e235dda7"
+              alt="Arul and Himanshu Mishra">
             <div>
               <p class="font-weight-bold">
-                <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+                <a class="text-decoration-none" href="#">Sorry, State Lines Don't Stop Coronavirus</a>
               </p>
               <p class="text-muted mb-2">
-                By Fred Guttenberg
+                By Arul and Himanshu Mishra
               </p>
             </div>
           </div>
-          <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont py-2">
+          <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont py-1">
             <img class="pr-2 mb-2 opinion-img"
-              src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454"
-              alt="Fred">
+              src="https://d.newsweek.com/en/full/1581567/moshik-temkin.png?w=63&h=63&f=71f9e092b94b440fa16fa3f3fe2ac3a6"
+              alt="Moshik Temkin">
             <div>
               <p class="font-weight-bold">
-                <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+                <a class="text-decoration-none" href="#">Bernie Offered Us the Future. Why Did He Fail—and What Did We Forfeit? </a>
               </p>
               <p class="text-muted mb-2">
-                By Fred Guttenberg
+                By Moshik Temkin
               </p>
             </div>
           </div>
-          <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont py-2">
+          <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont py-1">
             <img class="pr-2 mb-2 opinion-img"
-              src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454"
-              alt="Fred">
+              src="https://d.newsweek.com/en/full/1581448/kerry-brown.png?w=63&h=63&f=a5ed56a548bd2007c3d6897dc38752d9"
+              alt="Kerry Brown">
             <div>
               <p class="font-weight-bold">
-                <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+                <a class="text-decoration-none" href="#">For Black and Brown Businesses, the Next Relief Bill Could Be a Lifeline—or an Assault </a>
               </p>
               <p>
-                By Fred Guttenberg
+                By Kerry Brown
               </p>
             </div>
           </div>
-          <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont py-2">
+          <div class="d-flex border-bottom ml-0 pl-0 mb-3 op-cont py-1">
             <img class="pr-2 mb-2 opinion-img"
-              src="https://d.newsweek.com/en/full/109587/fred-guttenberg.png?w=63&h=63&f=a99ccb96daeaf39fdc9f392003761454"
-              alt="Fred">
+              src="https://d.newsweek.com/en/full/1581455/michael-blake-nathalie-molina-nino.png?w=63&h=63&f=6c8598f3212602c03b11e77fb3b36c0b"
+              alt="Michael Blake and Nathalie Molina Niño">
             <div>
               <p class="font-weight-bold">
                 <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
               </p>
               <p class="text-muted mb-2">
-                By Fred Guttenberg
+                By Michael Blake and Nathalie Molina Niño
               </p>
             </div>
           </div>
@@ -406,8 +407,8 @@
           <!-- Sec-->
           <div>
             <p class="text-uppercase font-weight-bold text-muted ">opinion</p>
-            <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2">
-              <img class="pr-2 mb-2 " src="https://d.newsweek.com/en/full/1581653/prince-harry.jpg?w=95&h=95&f=8c22cac59f2666e8f86f95fa171a71e9" alt="Fred">
+            <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+              <img class="pr-2 mb-2 more-img1" src="https://d.newsweek.com/en/full/1581653/prince-harry.jpg?w=95&h=95&f=8c22cac59f2666e8f86f95fa171a71e9" alt="Fred">
               <div>
                 <p class="font-weight-bold">
                   <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
