--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="signin-cont flex">
           <a class="text-uppercase text-white font-weight-bold" href="#">sign in</a>
-          <a class="text-uppercase bg-white text-danger font-weight-bold" href="#">subscribe&nbsp;<span
+          <a class="text-uppercase bg-white text-danger font-weight-bold p-1 text-decoration-none" href="#">subscribe&nbsp;<span
               class="fas fa-chevron-right"></span></a>
           <a class="text-decoration-none d-lg-none d-xl-none" href="#"><i
               class="fas fa-bars text-white font-weight-bold"></i></a>
@@ -83,7 +83,7 @@
       </nav>
     </header>
     <!---Main body section-->
-    <main class="container-fluid p-0 m-0">
+    <main class="container-fluid px-0">
       <div class="row bg-white mt-5 justify-content-center">
         <!--STORY SECTION-->
         <div class="row col-12 col-lg-8">
@@ -165,7 +165,7 @@
                 <img class="card-img-top"
                   src="images/feat6.jpg"
                   alt="Card image cap">
-                <p class="text-bottom m-0 font-weight-bold">SPONSORED INSIGHT</p>
+                <p class="sponsored-text m-0 font-weight-bold">SPONSORED INSIGHT</p>
               </div>
               <div class="card-body">
                 <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Weathering the Perfect
@@ -191,7 +191,7 @@
                 <img class="card-img-top"
                   src="images/feat8.jpg"
                   alt="Card image cap">
-                <p class="text-bottom m-0 font-weight-bold">SPONSORED INSIGHT</p>
+                <p class="sponsored-text m-0 font-weight-bold">SPONSORED INSIGHT</p>
               </div>
               <div class="card-body">
                 <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Who Leads the Field in
@@ -338,7 +338,7 @@
               <p class="text-uppercase font-weight-bold text-muted">More Stories</p>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1582081/thae-yong-ho-north-korea-south-korea.jpg?w=95&h=95&f=d3a42c85d96974141e0446e2db9ca863"
+                  src="images/more1.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -351,7 +351,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src=" https://d.newsweek.com/en/full/1581846/coronavirus.jpg?w=95&h=95&f=8d7d17188e36d5d8bbcc92af3eeb6e02"
+                  src="images/more2.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -362,7 +362,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1582063/sen-john-kennedy-after-coronavirus-briefing.jpg?w=95&h=95&f=1f4fbda6ca6fe6552a1b85d3ba1611a9"
+                  src="images/more3.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -373,7 +373,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1581499/medical-worker-emergency-field-hospital-central-park-april-08-2020-new-york-city.jpg?w=95&h=95&f=0297683b4b7d389c22d30f766d35308b"
+                  src="images/more4.jpg"
                   alt="Fred">
                 <div class="more-cont pl-0 ml-0">
                   <p class="font-weight-bold pl-1 ml-0">
@@ -384,7 +384,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1581845/stock-image-vaccine.jpg?w=95&h=95&f=166c78d203321bd5e0b2d899b96777f9"
+                  src="images/more5.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -395,7 +395,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1581990/spirit-airlines.jpg?w=95&h=95&f=d6ab91d8d5d7696d997d3e0d4cbadeec"
+                  src="images/more6.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -406,7 +406,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1581772/belgium-covid-19-coronavirus.jpg?w=95&h=95&f=dd1559bbfea8d81a427a8263b28d5f1e"
+                  src="images/more7.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -417,7 +417,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1582028/irs.jpg?w=95&h=95&f=29deb4d0923671e96a92b58b718b0833"
+                  src="images/more8.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -428,7 +428,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1583175/coronavirus-pandemic-free-cash-payments.jpg?w=95&h=95&f=2e251eace24a02cf146c016cb18762ba"
+                  src="images/more9.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -439,7 +439,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1583242/statista.jpg?w=95&h=95&f=d30822065865715de0500a95ac662d1f"
+                  src="images/more10.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -450,7 +450,7 @@
               </div>
               <div class="d-flex border-top mb-3 op-cont py-2 pl-0">
                 <img class="pr-1 mb-2 more-img"
-                  src="https://d.newsweek.com/en/full/1583300/india-gate-new-delhi.jpg?w=95&h=95&f=9cee46b43c1317ed475300829e071200"
+                  src="images/more11.jpg"
                   alt="Fred">
                 <div class="more-cont pl-1 ml-0">
                   <p class="font-weight-bold pl-0 ml-0">
@@ -549,7 +549,6 @@
 
             <!-- Sec-->
             <div>
-              <p class="text-uppercase font-weight-bold text-muted ">opinion</p>
               <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
                 <img class="pr-2 mb-2 more-img1"
                   src="https://d.newsweek.com/en/full/1581653/prince-harry.jpg?w=95&h=95&f=8c22cac59f2666e8f86f95fa171a71e9"
@@ -559,6 +558,128 @@
                     <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
                   </p>
                 </div>
+              </div>
+              <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+                <img class="pr-2 mb-2 more-img1"
+                  src="https://d.newsweek.com/en/full/1581653/prince-harry.jpg?w=95&h=95&f=8c22cac59f2666e8f86f95fa171a71e9"
+                  alt="Fred">
+                <div>
+                  <p class="font-weight-bold">
+                    <a class="text-decoration-none" href="#">Only Joe Biden Has the Ability Now to Heal This Nation </a>
+                  </p>
+                </div>
+              </div>
+              <p class="text-uppercase font-weight-bold text-muted heroes-title">Lastest News</p>
+              <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+                <img class="pr-2 mb-2 more-img1"
+                  src="https://d.newsweek.com/en/full/1583625/donald-trump-messages-whitmer-inconsistent-danger.jpg?w=95&h=95&l=0&t=0&f=e7f6badaf2f4d2f22b880a019f6ef761"
+                  alt="Fred">
+                <div>
+                  <p class="font-weight-bold">
+                    <a class="text-decoration-none" href="#">Gov. Whitmer: Trump's 'Inconsistent Messages' Increase 'Danger' to Public</a>
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+                <img class="pr-2 mb-2 more-img1"
+                  src="https://d.newsweek.com/en/full/1583601/jacksonville-florida-beach.jpg?w=95&h=95&l=0&t=0&f=2e4f7d1a1327a2a868c02696d0da5535"
+                  alt="Fred">
+                <div>
+                  <p class="font-weight-bold">
+                    <a class="text-decoration-none" href="#">Which Florida Beaches Are Open? Counties Allow Sunbathing, Surfing</a>
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+                <img class="pr-2 mb-2 more-img1"
+                  src="https://d.newsweek.com/en/full/1583588/little-fires-everywhere-season-2.jpg?w=95&h=95&f=73ba2f415323af3456c81e25cb8f1293"
+                  alt="Fred">
+                <div>
+                  <p class="font-weight-bold">
+                    <a class="text-decoration-none" href="#">'Little Fires Everywhere' Season 2: Will There Be Another Season?</a>
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+                <img class="pr-2 mb-2 more-img1"
+                  src="https://d.newsweek.com/en/full/1548491/chase-young-ohio-state.jpg?w=95&h=95&f=bd3c97151246e3b3f7f37b2a5b5d84ce"
+                  alt="Fred">
+                <div>
+                  <p class="font-weight-bold">
+                    <a class="text-decoration-none" href="#">NFL Draft Order 2020: Complete List of First Round Picks</a>
+                  </p>
+                </div>
+              </div>
+              <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont py-2 ">
+                <img class="pr-2 mb-2 more-img1"
+                  src="https://d.newsweek.com/en/full/1583643/vernon-jones.png?w=95&h=95&l=0&t=0&f=4e25984af84e4209f7cf0371decbe386"
+                  alt="Fred">
+                <div>
+                  <p class="font-weight-bold">
+                    <a class="text-decoration-none" href="#">Georgia Democrat Rep. Resigns After Being 'Attacked' By His Own Party</a>
+                  </p>
+                </div>
+              </div>
+              <div class="col-12 card p-0 mb-3 sponsor">
+                <div class="image-wrapper">
+                  <img class="card-img-top"
+                    src="images/feat8.jpg"
+                    alt="Card image cap">
+                  <p class="sponsored-text m-0 font-weight-bold">SPONSORED INSIGHT</p>
+                </div>
+                <div class="card-body">
+                  <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Who Leads the Field in
+                      Dependency Treatment in 2020?</a></h5>
+                  <p class="card-text">When seeking guidance on beating an addiction, there are many things to consider.
+                    Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right
+                    road for the rest of your life? Find out more.</p>
+                </div>
+              </div>
+              <div class="col-12 card p-0 mb-3 sponsor">
+                <div class="image-wrapper">
+                  <img class="card-img-top"
+                    src="images/feat8.jpg"
+                    alt="Card image cap">
+                  <p class="sponsored-text m-0 font-weight-bold">SPONSORED INSIGHT</p>
+                </div>
+                <div class="card-body">
+                  <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Who Leads the Field in
+                      Dependency Treatment in 2020?</a></h5>
+                  <p class="card-text">When seeking guidance on beating an addiction, there are many things to consider.
+                    Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right
+                    road for the rest of your life? Find out more.</p>
+                </div>
+              </div>
+              <div class="col-12 card p-0 mb-3 sponsor">
+                <div class="image-wrapper">
+                  <img class="card-img-top"
+                    src="images/feat8.jpg"
+                    alt="Card image cap">
+                  <p class="sponsored-text m-0 font-weight-bold">SPONSORED INSIGHT</p>
+                </div>
+                <div class="card-body">
+                  <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Who Leads the Field in
+                      Dependency Treatment in 2020?</a></h5>
+                  <p class="card-text">When seeking guidance on beating an addiction, there are many things to consider.
+                    Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right
+                    road for the rest of your life? Find out more.</p>
+                </div>
+              </div>
+              <div class="col-12 card p-0 mb-3 sponsor">
+                <div class="image-wrapper">
+                  <img class="card-img-top"
+                    src="images/feat8.jpg"
+                    alt="Card image cap">
+                  <p class="sponsored-text m-0 font-weight-bold">SPONSORED INSIGHT</p>
+                </div>
+                <div class="card-body">
+                  <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Who Leads the Field in
+                      Dependency Treatment in 2020?</a></h5>
+                  <p class="card-text">When seeking guidance on beating an addiction, there are many things to consider.
+                    Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right
+                    road for the rest of your life? Find out more.</p>
+                </div>
+              </div>
               </div>
             </div>
           </div>
