added final section

--- a/index.html
+++ b/index.html
@@ -1038,21 +1038,34 @@
         <div class="row ">
           <div class="col-12 col-lg-8">
             <h5 class="font-weight-bold below-heading">Suscribe</h5>
-            <div class="bg-light mag-text-img">
-              <div class="image-wrapper">
+            <div class="mag-text-img p-3">
+              <div class="image-wrapper mr-5">
                 <img  src="https://d.newsweek.com/en/full/1579878/april-17-24-2020-cover.jpg?w=170&q=95&f=b4884b3be2e05e586232cc3f3d569aa8" alt="mag">
                 <img class="second-image" src="https://d.newsweek.com/en/full/1582633/may-01-2020-cover.jpg?w=170&q=95&f=1a0d984a3141e5762557f214ca2a1540" alt="mag">
               </div>
-              <div class="text-mag">
+              <div class="text-mag ml-5">
                 <h5 class="font-weight-bold">
                   In-depth Stories You Don't See Elsewhere About Topics You Want to Read!
                 </h5>
                 <p>All Access + Weekly Delivery.
                   Choose A Membership That's Perfect for You!</p>
+                  <button type="button" class="btn">SUSCRIBE&nbsp;<span class="fas fa-chevron-right"></span></button>
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4"></div>
+          <div class="col-12 col-lg-4">
+            <h5 class="font-weight-bold below-heading">NEWSLETTER</h5>
+            <div class="new-cont">
+            <div class="image-wrap1">
+              <!-- <img src="https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5" alt="Phone image"> -->
+            </div>
+            <div class="text-sec">
+              <h4 class="font-weight-bold">The Starting 5</h4>
+              <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
+              <button type="button" class="btn"></button>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
   </main>
