--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
                 </h5>
                 <p>All Access + Weekly Delivery.
                   Choose A Membership That's Perfect for You!</p>
-                  <button type="button" class="btn">SUSCRIBE&nbsp;<span class="fas fa-chevron-right"></span></button>
+                  <button type="button" class="btn font-weight-bold btn-danger">SUSCRIBE&nbsp;<span class="fas fa-chevron-right"></span></button>
               </div>
             </div>
           </div>
@@ -1059,10 +1059,10 @@
             <div class="image-wrap1">
               <!-- <img src="https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5" alt="Phone image"> -->
             </div>
-            <div class="text-sec">
+            <div class="text-sec m-2">
               <h4 class="font-weight-bold">The Starting 5</h4>
               <p>See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
-              <button type="button" class="btn"></button>
+              <button type="button" class="btn font-weight-bold btn-danger">SIGN UP</button>
             </div>
           </div>
           </div>
